# surface-grid

./: CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md
examples/: continuity_test_cube.rs  continuity_test_rect.rs  conway.rs
src/: lib.rs  sphere.rs
