[package]
name = "surface-grid"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
static-array = "0.3.0"

[dev-dependencies]
pixels = "0.13.0"
winit = { version = "0.29.10", default_features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
rand = "0.8.5"

