[package]
name = "surface-grid"
version = "0.3.2"
authors = [
    "WhyAreAllTheseTaken <48136416+WhyAreAllTheseTaken@users.noreply.github.com>"
]
edition = "2021"
license = "BSD-3-Clause"
resolver = "2"
description = "A crate providing data structures for square-tiled grids wrapped around the surface of certain objects."
homepage = "https://github.com/WhyAreAllTheseTaken/surface-grid"
repository = "https://github.com/WhyAreAllTheseTaken/surface-grid"
keywords = ["projection", "cellular", "automata", "globe", "map"]
categories = ["data-structures", "simulation"]
readme = "README.md"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "Cargo.lock",
    "src/**.rs",
    "examples/**.rs",
    "CHANGELOG.md"
]

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
static-array = { version = "0.5.0", features = ["rayon"] }

[dev-dependencies]
pixels = "0.13.0"
winit = { version = "0.30.5", default_features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
rand = "0.8.5"
approx = "0.5.1"

